--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             </p>
             
             <div class="icons">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-square-instagram"></i>
-                <i class="fa-brands fa-linkedin"></i>
+                <a href="https://www.facebook.com/nathsucakezzz.01"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://github.com/nxth-null01"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/asy_nxth/"><i class="fa-brands fa-square-instagram"></i></a>
+               <a href="https://www.linkedin.com/in/nathaniel-simbajon-64918739a/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
             </div>
             </div>
